crates/tests/libs/bindgen/data/error/callback_opt_with_args/input.rdl

#[win32]
mod Test {
    extern fn Handler(#[opt(42)] value: i32);
}
        